95_kraken: Fixed so that tabs are not blue on iPhone
Merge branch '95_kraken' into 'main'

Reviewed by 
Approved by Approved-by: Jonas Gustavsson <oi16jgn@cs.umu.se>

Description
https://trello.com/c/nQA72cNq/95-tab-knappf%C3%A4rger-%C3%A4r-bl%C3%A5-p%C3%A5-iphone-de-ska-vara-svarta

on iPhone, the tab that was not selected had blue text, now they have the correct color.

Branch commits
* Fixed so that tabs are not blue on iPhone

--- a/src/pages/Workout/AddActivityWorkout/AddActivity.module.css
+++ b/src/pages/Workout/AddActivityWorkout/AddActivity.module.css
@@ -27,6 +27,7 @@
 :global(.nav-link){
   padding: 0 1.5rem 0 1.5rem !important;
   border: 0 !important;
+  color: var(--black-primary);
 }
 
 button:focus{
